fixed spacing on dashboard

--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -200,3 +200,7 @@ a {
 .promo-info a {
   color: black !important ;
 }
+
+.shop-pic {
+  margin-left: 30px;
+}
